changed the way archive changes in itemversionarchive. The diff is now calculated and stored with each record instead of just the raw field values. This fixes a problem where diffs can require the existence of objects that might not be present in the future.  Changed the way the attachment fields are summarized in the formatPrintField function. Now it actually shows the comment text and the display file names but truncates these all to some extent.

--- a/partforge/public/commonLayout.css
+++ b/partforge/public/commonLayout.css
@@ -777,6 +777,10 @@ td.editlink_td_left {
 	color: #FF0000;
 }
 
+.successgreen {
+	color: green;
+}
+
 .fakedatestyle {
 	color: #FF0000;
 	background-color: #FFF;
